--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.6",
-    "yup": "^0.28.3"
+    "sequelize": "^5.21.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
